added env details to the cyclic and auth0 env

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,11 @@
 			crossorigin="anonymous" />
 	</head>
 	<body>
-		<% pictures.forEach(function(picture){ %>
+		<% if (locals.isAuthenticated) { %>
+		<p>You are logged in.</p>
+		<% } else { %>
+		<p>You are not logged in. <a href="/login" class="underline">Login</a>.</p>
+		<% } %> <% pictures.forEach(function(picture){ %>
 		<div class="text-center">
 			<img
 				class="mb-3"
